# QTG_0-1Knapsack

./: .gitignore  .to_be_considered  CMakeLists.txt  README.md  benchmark_instances.txt  benchmark_parameters.txt  cmbcount.c  conanfile.txt  generator_input.txt  main.c  main.cpp  makefile  plot_benchmark.py  pyproject.toml  setup.py
apps/: CMakeLists.txt  cmbcount.c  generator.cpp  main.c
cmake/: CPM.cmake
evaluation/: 00_generate.py  01_run_solver.py  02_run_benchmark.py  02_run_classical_benchmark.py  02_run_combo_benchmark.py  03_run_qtg_benchmark.py  04_run_qbnb_benchmark.py  04_used_memory.ipynb  05_elapsed_cycles.ipynb  05_run_ctg_benchmark.py  06_classical_comparison.ipynb  06_elapsed_cycles.ipynb  07_solver_comparison.ipynb  08_ctg_qtg_analysis.ipynb  09_grover_iterations.ipynb  requirements.txt
evaluation/instances/: n_100_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_100_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_100_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_100_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_100_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_100_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_10_c_100000_g_2_f_0.30_e_0.00_s_100.knap  n_10_c_100000_g_2_f_0.30_e_0.00_s_200.knap  n_10_c_100000_g_2_f_0.30_e_0.00_s_300.knap  n_1100_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_1100_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_1100_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_1100_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_1100_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_1100_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_1300_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_1300_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_1300_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_1300_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_1300_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_1300_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_1400_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_1400_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_1400_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_1400_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_1400_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_1400_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_1500_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_1500_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_1500_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_1500_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_1500_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_1500_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_1600_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_1600_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_1600_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_1600_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_1600_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_1600_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_200_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  (+59 more)
evaluation/large_instances/: n_10000_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_10000_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_10000_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_10000_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_10000_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_10000_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_1000_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_1000_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_1000_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_1000_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_1000_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_1000_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_11000_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_11000_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_11000_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_11000_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_11000_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_11000_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_12000_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_12000_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_12000_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_12000_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_12000_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_12000_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_13000_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_13000_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_13000_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_13000_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_13000_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_13000_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_14000_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_14000_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_14000_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  n_14000_c_10000000000_g_2_f_0.3_eps_1e-05_s_100.knap  n_14000_c_10000000000_g_2_f_0.3_eps_1e-05_s_200.knap  n_14000_c_10000000000_g_2_f_0.3_eps_1e-05_s_300.knap  n_15000_c_10000000000_g_2_f_0.3_eps_0_s_100.knap  n_15000_c_10000000000_g_2_f_0.3_eps_0_s_200.knap  n_15000_c_10000000000_g_2_f_0.3_eps_0_s_300.knap  (+141 more)
header/: RNG.cpp  RNG.h  benchmarking.cpp  classical_qtg.c  combo.c  combo.h  combo_wrap.cpp  combo_wrap.h  combowrp.c  combowrp.h  cpp_combo.cpp  cpp_combo.h  gain.c  gain.cpp  gate_count.cpp  gate_count.h  greedy.cpp  greedy.h  instance.cpp  instance.h  knapsack.c  knapsack.h  main.c  makefile  qtg_count.c  qtg_count.h  qtgcount.c  qtgcount.h  simulate.c  simulate.cpp  simulate.h  simulator.cpp  simulator.h  state_generator.cpp  state_generator.h  stategen.c  stategen.h  statelst.c  syslinks.c  syslinks.h
include/: combo.h  combowrp.h  expknap.h  expknapwrp.h  knapsack.h  qtgcount.h  simulate.h
instance_generator/: generator.cpp
src/: CMakeLists.txt  classical_qtg.c  combo.c  combowrp.c  expknap.c  expknapwrp.c  generator.cpp  knapsack.c  qtgcount.c  simulate.c  stategen.c  syslinks.c
src/bindings/: _qtg_bindings.cpp  qtg_bindings.cpp
src/combo/: combo.c  combowrp.c
src/common/: knapsack.c  stategen.c  syslinks.c
src/expknap/: expknap.c
src/generator/: jooken_generator.cpp
src/map/: map.c  map.cpp
src/simulation/: qtgcount.c  quantum_branch_and_bound.c  simulate.c
tests/: test_greedy.py  test_numerical_errors.py  test_parse.py  test_solvers.py
(+9112 files in other folders)
